Switch team to list from divs.
Idea from Eddie and made more sense overall since, well, it is a list of people...

--- a/index.html
+++ b/index.html
@@ -83,19 +83,21 @@
 			<h2>And I quickly grew to love not only the app but also the awesome people behind the app:</h2>
 			<div class="buffer-team">
 				<!-- Okay, yes, I am being a terrible person and hotlinking from your CloudFront CDN. I figured it would be a bit less creepy doing this than just housing all your photos on my own server. :) -->
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/joel.png" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/leo.png" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/carolyn.jpg" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/sunil.png" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/andy.jpg" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/michelle.jpg" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/colin.png" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/asa.jpg"></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/belle.jpg" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/bmr.jpg" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/brian.png" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/niel.jpg" alt=""></div>
-				<div class="team-member"><img src="https://d389zggrogs7qo.cloudfront.net/images/team/mattw.jpeg" alt=""></div>
+				<ul>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/joel.png" alt="Joel"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/leo.png" alt="Leo"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/carolyn.jpg" alt="Carolyn"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/sunil.png" alt="Sunil"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/andy.jpg" alt="Andy"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/michelle.jpg" alt="Michelle"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/colin.png" alt="Colin"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/asa.jpg" alt="Asa"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/belle.jpg" alt="Belle"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/bmr.jpg" alt="BMR"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/brian.png" alt="Brian"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/niel.jpg" alt="Niel"></li>
+					<li><img src="https://d389zggrogs7qo.cloudfront.net/images/team/mattw.jpeg" alt="Matt"></li>
+				</ul>
 			</div>
 		</section>
 		<section id="section3" data-anchor="drum-roll">
