Edits to colophon to add people who helped and also consolidate tools

--- a/index.html
+++ b/index.html
@@ -172,30 +172,22 @@
 				<h2>Colophon</h2>
 				<h3>Tools Used:</h3>
 				<ul>
-					<li>My own <a href="https://github.com/chryton/fullPage.js">fork</a> of <a href="https://github.com/alvarotrigo/fullPage.js">fullPage.js</a></li>
+					<li><a href="https://github.com/chryton/hellobuffer">Git/GitHub</a>, my own <a href="https://github.com/chryton/fullPage.js">fork</a> of <a href="https://github.com/alvarotrigo/fullPage.js">fullPage.js</a>, and <a href="http://www.git-tower.com/">Tower</a> (still working on getting comfortable with git in the command line)</li>
 					<li><a href="http://sass-lang.com/">SASS</a></li>
-					<li><a href="https://github.com/chryton/hellobuffer">Git/GitHub</a></li>
-					<li><a href="http://www.sublimetext.com/2">Sublime Text 2</a>
-						<ul>
-							<li><a href="https://sublime.wbond.net/packages/SASS%20Build">SASS Build</a></li>
-							<li><a href="https://sublime.wbond.net/packages/Emmet">Emmet</a></li>
-							<li><a href="https://sublime.wbond.net/packages/Modific">Modific</a></li>
-						</ul>
-					</li>
-					<li><a href="http://www.git-tower.com/">Tower</a> (still working on getting comfortable with git in the command line)</li>
-					<li><a href="https://panic.com/transmit/">Transmit</a> (for checks and occasional <a href="http://css-tricks.com/deployment/">commando deployment</a>)</li>
 					<li><a href="http://dploy.io/">Dploy</a> for deployment as I am a big fan of <a href="http://beanstalkapp.com/">Beanstalk</a></li>
-					<li><a href="http://subtlepatterns.com">Subtle Patterns</a> for, well, subtlety.</li>
-					<li><a href="http://icomoon.io/">Ico Moon</a> for the customized icon font used through out.</li>
+					<li><a href="http://subtlepatterns.com">Subtle Patterns</a> for, well, subtlety</li>
+					<li><a href="http://icomoon.io/">Ico Moon</a> for the customized icon font used through out</li>
+					<li>Tron Icon created from <a href="http://www.deviantart.com/art/Tron-Identity-disk-icon-193427605">sn3akyfox's source</a>.</li>
 					<li>Image on #i-am-a-user courtesy of Danilo Rizzuti / FreeDigitalPhotos.net</li>
 				</ul>
 				<h3>With a Little Help From My Friends:</h3>
 				<ul>
 					<li><a href="www.linkedin.com/pub/helen-chatt/19/261/383">Helen Chatt</a> for being there to push and nag me to keep me from procrastinating. Also, Mayan cocoa no-bake cookies.</li>
-					<li><a href="www.linkedin.com/in/samearls">Sam Earls</a> for being helpful with edits to my stream of conciousness and being six feet tall.</li>
+					<li><a href="www.linkedin.com/in/samearls">Sam Earls</a> and <a href="www.linkedin.com/in/jessicatorrezriley">Jessica Torrez-Riley</a> for being helpful with edits to my stream of conciousness. And thanks to Sam for being six feet tall.</li>
 					<li><a href="www.linkedin.com/pub/zan-gantt/37/9a3/745">Zan Gantt</a> for being far better at me than Halo and offering some of the best design help I could ask for.</li>
 					<li><a href="http://www.johnbhartley.com/">John Hartley</a> for being nerd-baller with honest suggestions and comments.</li>
 					<li><a href="http://www.linkedin.com/in/steudel">Mark Steudel</a> for being a mentor and suffering through my inane instant messages.</li>
+					<li><a href="www.linkedin.com/in/edmendoza3">Eddie "The Grit" Mendoza</a> for being the most helpful front-end sidekick.</li>
 				</ul>
 				<!-- I should also note that I am a huge Transformers fan. -->
 				<div class="bufferthis">
